@@ -11,7 +11,7 @@ My implementation Services are in the following dirs:
 * https://github.com/IvanGarcia7/Jade_TPM_Security/tree/master/src/jade/core/SecureCloud (NEW)
 * https://github.com/IvanGarcia7/Jade_TPM_Security/tree/master/src/jade/core/SecureAgent (NEW)
 * https://github.com/IvanGarcia7/Jade_TPM_Security/tree/master/src/jade/core/SecureTPM (NEW)
-* https://github.com/IvanGarcia7/Jade_TPM_Security/tree/master/src/jade/core/Interfaces (NEW)
+* https://github.com/IvanGarcia7/Jade_TPM_Security/tree/master/src/jade/core/GUI (NEW)
 
 Here are some **basic examples** to demonstrate how the library works.
 
@@ -21,12 +21,6 @@ Here are some **basic examples** to demonstrate how the library works.
 
 java -cp TPM.jar:test.jar:migration.jar jade.Boot -gui -host localhost -port 8080 -services jade.core.SecureCloud.SecureCloudTPMService\;jade.core.mobility.AgentMobilityService\;jade.core.migration.InterPlatformMobilityService -agents CA:vom.CAPlatform
 
-## NEW VERSION
-
-java -cp TPM.jar:mongo.jar:jfoenix-9.0.8.jar --module-path /usr/share/openjfx/lib  --add-modules javafx.controls,javafx.fxml   jade.Boot -gui -host localhost -port 8080 -services jade.core.SecureCloud.SecureCloudTPMService -agents CA:jade.core.Interfaces.InterfazCASegura.src.vom.CAPlatform
-
-
-
 
 # START AGENT 2
 
@@ -35,11 +29,6 @@ java -cp TPM.jar:mongo.jar:jfoenix-9.0.8.jar --module-path /usr/share/openjfx/li
 
 
 java -cp commons.jar:TPM.jar:test.jar:migration.jar jade.Boot -container-name P2 -gui -host localhost -port 1364 -mtp jade.mtp.http.MessageTransportProtocol\(http://raspberrypi:36711\) -services jade.core.mobility.AgentMobilityService\;jade.core.migration.InterPlatformMobilityService\;jade.core.SecureAgent.SecureAgentTPMService -agents A2:vom.CAAgent
-
-## NEW VERSION
-
-java -cp commons.jar:TPM.jar:migration.jar:jfoenix-9.0.8.jar --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml  jade.Boot -container-name P2 -gui -host localhost -port 1364 -mtp jade.mtp.http.MessageTransportProtocol\(http://raspberrypi:36711\) -services jade.core.mobility.AgentMobilityService\;jade.core.migration.InterPlatformMobilityService\;jade.core.SecureAgent.SecureAgentTPMService -agents A2:jade.core.Interfaces.InterfazAgentSegura.src.vom.CAAgent
-
 
 
 # START AGENT 1
@@ -51,10 +40,6 @@ java -cp commons.jar:TPM.jar:migration.jar:jfoenix-9.0.8.jar --module-path /usr/
 
 
 java -cp commons.jar:TPM.jar:test.jar:migration.jar jade.Boot -container-name P1 -gui -host localhost -port 1564 -mtp jade.mtp.http.MessageTransportProtocol\(http://raspberrypi:36811\) -services jade.core.mobility.AgentMobilityService\;jade.core.migration.InterPlatformMobilityService\;jade.core.SecureAgent.SecureAgentTPMService -agents A1:vom.CAAgent
-
-## NEW VERSION
-
-java -cp commons.jar:TPM.jar:migration.jar:jfoenix-9.0.8.jar --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml jade.Boot -container-name P1 -gui -host localhost -port 1264 -mtp jade.mtp.http.MessageTransportProtocol\(http://raspberrypi:32711\) -services jade.core.mobility.AgentMobilityService\;jade.core.migration.InterPlatformMobilityService\;jade.core.SecureAgent.SecureAgentTPMService -agents A1:jade.core.Interfaces.InterfazAgentSegura.src.vom.CAAgent
 
 
 
